// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render StockForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Company symbol"
    type="text"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Track
    </button>
  </div>
</form>
`;

exports[`should render StockForm correctly with data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Company symbol"
    type="text"
    value="Apple"
  />
  <div>
    <button
      className="button"
    >
      Track
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Company symbol"
    type="text"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Track
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <p
    className="form__error"
  >
    Please provide name.
  </p>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Company symbol"
    type="text"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Track
    </button>
  </div>
</form>
`;
